# SmartCalc_v2

./: README.md
src/: CMakeLists.txt  Makefile  main.cc
src/controller/: controller_credit_calc.h  controller_smart_calc.h
src/info/: SmartCalc_v2_info.md  configure_doc
src/model/: calculate.cc  calculate.h  check_sequence.cc  check_sequence.h  conversion.cc  conversion.h  credit.cc  credit.h  lexem.cc  lexem.h  parser.cc  parser.h  validation.cc  validation.h
src/resources/: resources.qrc
src/resources/icons/: icon.icns
src/tests/: calculate_test.cc  conversion_test.cc  credit_test.cc  test.h  validator_test.cc
src/view/: credit_calc.cpp  credit_calc.h  credit_calc.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  smartcalc.cpp  smartcalc.h  smartcalc.ui
